2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Repair the .deb build system

	* debian/control: fix the file to get monkey-bubble built again

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	For Maemo, specify the full path of the binary in the .desktop file.
	Based on the Maemo port of Monkey-Bubble which was created by Jouni
	Roivas.

	* Makefile.am: updated the GNOME rule to build the file properly
	* monkey-bubble.desktop.in.in: added the substitute pattern to the
	file

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Added another preprocessing step as Maemo requires the full path to be
	given in the .desktop file.

	* Makefile.am: added the rules to properly build the desktop file with
	another preprocessing step
	* monkey-bubble.desktop.in: renamed
	* monkey-bubble.desktop.in.in: new name of the file

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Clean up the build tree properly.

	* data/Makefile.am: added $(dbus_DATA) to CLEANFILES

2008-01-10  Sven Herzberg  <herzi@gnome-de.org>

	Install a D-Bus service file for Maemo to get an idea about restarting
	Monkey-Bubble. Based on the Maemo port of Monkey-Bubble which was
	created by Jouni Roivas.

	* data/com.nokia.monkey_bubble.service.in: template for the service
	file
	* data/Makefile.am: added rules to distribute the template and build
	and install the service file

2008-01-10  Sven Herzberg  <herzi@gnome-de.org>

	Install monkey-bubble.desktop to the right path for Maemo. Based on
	the Maemo port of Monkey-Bubble which was created by Jouni Roivas.

	* configure.in: set GNOME and MAEMO conditionals for automake
	* Makefile.am: set the right installation path for the .desktop file
	for Maemo and for GNOME

2008-01-09  Sven Herzberg  <herzi@gnome-de.org>

	Fix compilation of a fresh checkout (closes #508137)

	* src/monkey/Makefile.am: use BUILT_SOURCES for built files

2008-01-04  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/main.c: use GOptionContext for argument parsing, this will