@@ -44,3 +44,12 @@ CLEANFILES=\
 	$(applications_in_files) \
 	$(intltool_in_files:.in=) \
 	$(NULL)
+
+deb: dist
+	-mkdir $(top_builddir)/debian-build
+	cd $(top_builddir)/debian-build && tar zxf ../$(top_builddir)/$(PACKAGE)-$(VERSION).tar.gz
+	cp -r $(top_srcdir)/debian $(top_builddir)/debian-build/$(PACKAGE)-$(VERSION)/
+	cd $(top_builddir)/debian-build/$(PACKAGE)-$(VERSION) && \
+		 dpkg-buildpackage -rfakeroot || \
+		 true
+	-rm -rf $(top_builddir)/debian-build/$(PACKAGE)-$(VERSION)
